scrollbars fixed

--- a/geomy/style.css
+++ b/geomy/style.css
@@ -1,3 +1,4 @@
 body { /* makes the margin 0 so there are no white borders */
 	margin: 0;
+	overflow: hidden;
 }
